<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_wifi"
        android:summary="@string/pref_description_wifi"
        android:title="@string/pref_enable_wifi" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_network_ssid"
        android:inputType="textCapWords"
        android:key="pref_ssid"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_network_name" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_network_password"
        android:inputType="textPassword"
        android:key="pref_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_network_enter_password" />



 </PreferenceScreen>
